test/errors/semantic/unresolved_reference.cml
module semantic_unresolved_reference

func main(): int sync {
    let value = missing_name + 1
    println(value)
    return 0
}
